Remove transparent logo files and update references
Deletes unused transparent logo image files and updates
references in HTML files to use non-transparent versions.
Adjusts CSS color variables for improved visual consistency.

Enhances code maintainability by removing redundant assets
and aligning design elements.

--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="Home | PlantCare Hub">
     <meta property="og:description" content="Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.">
-    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/project/images/logos/logo-light-transparent.png">
+    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/project/images/logos/logo-light.png">
     <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/project/index.html">
     <meta property="og:type" content="website">
 
@@ -40,7 +40,7 @@
     <header>
       <nav class="navBar">
         <div class="logo">
-          <img src="images/logos/logo-light-transparent.png" alt="logo" class="logo-img" width="150" height="45" loading="lazy">
+          <img src="images/logos/logo-light.png" alt="logo" class="logo-img" width="150" height="45" loading="lazy">
         </div>
         <ul id="menu-list">
           <li><a href="index.html" class="active">Home</a></li>
@@ -104,7 +104,7 @@
           <div>
             <h2>Popular</h2>
             <p>Start your plant journey with these easy-to-care-for favorites</p>
-        </div>
+          </div>
           <div id="popular-cards" class="card-container">
             <figure>
               <img src="images/hero-image.webp" alt="Monstera" class="card-image" width="300" height="200" loading="lazy">
@@ -122,6 +122,7 @@
             </figure>
           </div>
           <button id="show-more-popular" class="btn btn-primary">Show More</button>
+        </div>
       </section>
 
 
@@ -152,8 +153,9 @@
               <h3 class="guide-number">4</h3>
               <h4>Watch Them Thrive</h4>
               <p>Connect with fellow plant lovers for tips and support.</p>
+            </div>
           </div>
-          </div>
+        </div>
       </section> 
       <!-- START SECTION -->
       <section class="start-section">
@@ -176,7 +178,7 @@
         <!-- Logo Section -->
         <div class="footer-logo">
           <img
-            src="images/logos/icon-light-transparent.png"
+            src="images/logos/icon-light.png"
             alt="Logo"
             width="75"
             height="75"
