--- a/project/my-plants.html
+++ b/project/my-plants.html
@@ -13,7 +13,7 @@
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="My Plants | PlantCare Hub">
     <meta property="og:description" content="Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.">
-    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/project/images/logos/logo-light-transparent.png">
+    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/project/images/logos/logo-light.png">
     <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/project/my-plants.html">
     <meta property="og:type" content="website">
 
@@ -42,7 +42,7 @@
     <header>
       <nav class="navBar">
         <div class="logo">
-          <img src="images/logos/logo-light-transparent.png" alt="logo" class="logo-img" width="150" height="45" loading="lazy">
+          <img src="images/logos/logo-light.png" alt="logo" class="logo-img" width="150" height="45" loading="lazy">
         </div>
         <ul id="menu-list">
           <li><a href="index.html">Home</a></li>
@@ -101,7 +101,7 @@
         <!-- Logo Section -->
         <div class="footer-logo">
           <img
-            src="images/logos/icon-light-transparent.png"
+            src="images/logos/icon-light.png"
             alt="Logo"
             width="75"
             height="75"
