Enhances plant modal accessibility and interaction logic
Improves the accessibility of the plant modal by adding ARIA roles, labels, and a hidden title for screen readers. Refines modal interaction logic to handle content updates and closing behaviors more robustly. Updates plant card rendering to streamline event handling and ensure dynamic modal content integrity. Fixes minor inconsistencies in error handling and code style.

--- a/project/plant-library.html
+++ b/project/plant-library.html
@@ -74,11 +74,13 @@
           <div id="plant-cards" class="card-container"></div>
           <button id="show-more" class="btn btn-primary">Show More</button>
         </div>
-        <!-- Card Modal -->
-        <div id="card-modal" class="modal">
-            <!-- insert Modal data Dynamically -->
-        </div>
       </section>
+      <!-- Card Modal -->
+      <div id="card-modal" class="modal plant-modal" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+        <h2 id="modal-title" style="display:none;">Plant Details</h2>
+      <!-- Modal content gets inserted here -->
+      </div>
+
     </main>
     <footer class="footer">
       <div class="footer-container">
