Update image paths and adjust HTML structure for consistency
Replaces placeholder image URLs with relative paths to local WebP images for improved performance and consistency.

Refines HTML structure by cleaning up unnecessary class attributes and adjusting content for better readability and maintainability.

--- a/project/index.html
+++ b/project/index.html
@@ -38,9 +38,9 @@
 </head>
 <body>
     <header>
-      <nav class="navBar">
+      <nav class="">
         <div class="logo">
-          <img src="images/logos/logo-light.png" alt="logo" class="logo-img" width="150" height="45" loading="lazy">
+          <img src="images/logos/logo-light.png" alt="logo" class="" width="150" height="45" loading="lazy">
         </div>
         <ul id="menu-list">
           <li><a href="index.html" class="active">Home</a></li>
@@ -49,16 +49,16 @@
         </ul>
       </nav>
         <div>
-          <i id="menu-icon" class="fa-solid fa-bars" tabindex="0" onclick="toggleMenu()"></i>
-          <i id="close-icon" class="fa-solid fa-xmark" tabindex="0" onclick="toggleMenu()"></i>
+          <i id="menu-icon" class=" fa-bars" tabindex="0" onclick="toggleMenu()"></i>
+          <i id="close-icon" class=" fa-xmark" tabindex="0" onclick="toggleMenu()"></i>
         </div>
     </header>
     <main>
       <!-- HERO SECTION -->
-      <section class="hero-section">
+      <section>
         <div class="hero-container">
           <div>
-            <div class="hero-text">
+            <div class="">
               <h1 class="hero-title">Welcome to PlantCare Hub</h1>
               <p class="hero-description">Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.</p>
             </div>
@@ -107,14 +107,14 @@
           </div>
           <div id="popular-cards" class="card-container">
             <figure>
-              <img src="images/hero-image.webp" alt="Monstera" class="card-image" width="300" height="200" loading="lazy">
+              <img src="images/boston-fern.webp" alt="Monstera" class="card-image" width="300" height="200" loading="lazy">
               <figcaption>
-                <h3>Monstera Deliciosa</h3>
-                <p>Also known as the Swiss Cheese Plant, this tropical beauty is perfect for beginners.</p>
+                <h3>Boston Fern</h3>
+                <p>A lush, low-maintenance plant that thrives in humidity.</p>
               </figcaption>
             </figure>
             <figure>
-              <img src="images/hero-image.webp" alt="Snake Plant" class="card-image" width="300" height="200" loading="lazy">
+              <img src="images/snake-plant.webp" alt="Snake Plant" class="card-image" width="300" height="200" loading="lazy">
               <figcaption>
                 <h3>Snake Plant</h3>
                 <p>Known for its air-purifying qualities, this hardy plant thrives in low light.</p>
