Refactors UI elements and improves styling consistency
Replaces a button with a link in the popular section for better navigation. Updates logo to a dark version for improved contrast. Refines CSS variables, spacing, and alignment for consistent styling. Simplifies card layout and hover effects for a cleaner design. Fixes minor formatting and indentation issues across stylesheets.

--- a/project/index.html
+++ b/project/index.html
@@ -121,7 +121,7 @@
               </figcaption>
             </figure>
           </div>
-          <button id="show-more-popular" class="btn btn-primary">Show More</button>
+          <a href="plant-library.html" id="show-more-popular" class="btn btn-primary">Show More</a>
         </div>
       </section>
 
@@ -178,7 +178,7 @@
         <!-- Logo Section -->
         <div class="footer-logo">
           <img
-            src="images/logos/icon-light.png"
+            src="images/logos/icon-dark.png"
             alt="Logo"
             width="75"
             height="75"
