Replaces footer content and updates styles for consistency
Replaces social media links and newsletter subscription forms
with a demo video link in footers across multiple pages. Updates
footer logo to use the dark version. Simplifies and refactors
footer CSS, removing unnecessary styles and improving maintainability.

Updates font imports for efficiency and corrects icon classes
for navigation menu for better compatibility and functionality.

--- a/project/my-plants.html
+++ b/project/my-plants.html
@@ -101,7 +101,7 @@
         <!-- Logo Section -->
         <div class="footer-logo">
           <img
-            src="images/logos/icon-light.png"
+            src="images/logos/icon-dark.png"
             alt="Logo"
             width="75"
             height="75"
@@ -109,40 +109,11 @@
           >
         </div>
 
-        <!-- Social Media Links -->
-        <div class="footer-social">
-          <p>Follow Us</p>
-          <ul class="social-links">
-            <li>
-              <a href="https://www.facebook.com" aria-label="Facebook">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.x.com" aria-label="Twitter">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com" aria-label="Instagram">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com" aria-label="YouTube">
-                <i class="fab fa-youtube"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Subscribe Form -->
-        <div class="footer-subscribe">
-          <p>Subscribe to Our Newsletter</p>
-          <form action="thank-you.html" method="post" class="subscribe-form">
-            <input type="email" placeholder="Enter your email" required >
-            <button type="submit" class="primary-button">Subscribe</button>
-          </form>
+        <!--Loom Video Link -->
+        <div class="footer-video btn">
+          <a href="https://www.loom.com/share/4c0b1f8d2e3f4b5c9e6f7a8b9c0d1e2f" target="_blank" rel="noopener noreferrer">
+            Watch Demo Video
+          </a>
         </div>
       </div>
       <!-- My Details -->
