--- a/project/index.html
+++ b/project/index.html
@@ -24,8 +24,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
@@ -49,8 +48,8 @@
         </ul>
       </nav>
         <div>
-          <i id="menu-icon" class=" fa-bars" tabindex="0" onclick="toggleMenu()"></i>
-          <i id="close-icon" class=" fa-xmark" tabindex="0" onclick="toggleMenu()"></i>
+          <i id="menu-icon" class="fa-solid fa-bars" tabindex="0" onclick="toggleMenu()"></i>
+          <i id="close-icon" class="fa-solid fa-xmark" tabindex="0" onclick="toggleMenu()"></i>
         </div>
     </header>
     <main>
@@ -186,40 +185,11 @@
           >
         </div>
 
-        <!-- Social Media Links -->
-        <div class="footer-social">
-          <p>Follow Us</p>
-          <ul class="social-links">
-            <li>
-              <a href="https://www.facebook.com" aria-label="Facebook">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.x.com" aria-label="Twitter">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com" aria-label="Instagram">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com" aria-label="YouTube">
-                <i class="fab fa-youtube"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Subscribe Form -->
-        <div class="footer-subscribe">
-          <p>Subscribe to Our Newsletter</p>
-          <form action="thank-you.html" method="post" class="subscribe-form">
-            <input type="email" placeholder="Enter your email" required >
-            <button type="submit" class="primary-button">Subscribe</button>
-          </form>
+        <!--Loom Video Link -->
+        <div class="footer-video btn">
+          <a href="https://www.loom.com/share/4c0b1f8d2e3f4b5c9e6f7a8b9c0d1e2f" target="_blank" rel="noopener noreferrer">
+            Watch Demo Video
+          </a>
         </div>
       </div>
       <!-- My Details -->
