Update OG image URLs and consolidate font imports
Replaces outdated GitHub-hosted OG image URLs with GitHub Pages-hosted links for better accessibility and performance. Consolidates font imports into a single request to optimize loading and reduce redundancy.

--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="Home | PlantCare Hub">
     <meta property="og:description" content="Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.">
-    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/project/images/logos/logo-light.png">
+    <meta property="og:image" content="https://michaelkazembe.github.io/wdd231/project/images/hero-image.webp">
     <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/project/index.html">
     <meta property="og:type" content="website">
 
