--- a/project/care-action.html
+++ b/project/care-action.html
@@ -13,7 +13,7 @@
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="Care Tips | PlantCare Hub">
     <meta property="og:description" content="Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.">
-    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/project/images/logos/logo-light-transparent.png">
+    <meta property="og:image" content="https://michaelkazembe.github.io/wdd231/project/images/hero-image.webp">
     <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/project/my-plants.html">
     <meta property="og:type" content="website">
 
@@ -25,8 +25,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
