--- a/project/plant-library.html
+++ b/project/plant-library.html
@@ -31,7 +31,7 @@
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
-    <script src="scripts/plants.js" defer></script>
+    <script type="module" src="scripts/plants.js"></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous" defer></script>
