Refines logo image styling and cleans up unused CSS
Standardizes logo image dimensions across pages by introducing
a reusable `.logo-img` class in CSS. Removes redundant `height`
attribute from logo image HTML tags.

Also cleans up commented-out CSS code to improve code readability
and maintainability.

--- a/project/my-plants.html
+++ b/project/my-plants.html
@@ -41,7 +41,7 @@
     <header>
       <nav class="navBar">
         <div class="logo">
-          <img src="images/logos/logo-light.png" alt="logo" class="logo-img" width="150" height="45" loading="lazy">
+          <img src="images/logos/logo-light.png" alt="logo" class="logo-img" width="150" loading="lazy">
         </div>
         <ul id="menu-list">
           <li><a href="index.html">Home</a></li>
