--- a/project/index.html
+++ b/project/index.html
@@ -38,7 +38,7 @@
     <header>
       <nav class="">
         <div class="logo">
-          <img src="images/logos/logo-light.png" alt="logo" class="" width="150" height="45" loading="lazy">
+          <img src="images/logos/logo-light.png" alt="logo" class="logo-img" width="150" loading="lazy">
         </div>
         <ul id="menu-list">
           <li><a href="index.html" class="active">Home</a></li>
