--- a/project/plant-library.html
+++ b/project/plant-library.html
@@ -41,7 +41,7 @@
     <header>
       <nav class="navBar">
         <div class="logo">
-          <img src="images/logos/logo-light.png" alt="logo" class="logo-img" width="150" height="45" loading="lazy">
+          <img src="images/logos/logo-light.png" alt="logo" class="logo-img" width="150" loading="lazy">
         </div>
         <ul id="menu-list">
           <li><a href="index.html">Home</a></li>
