Refactors HTML structure and simplifies plant scripts
Removes unused modal and plant display scripts, consolidating functionality where necessary. Updates HTML to streamline section classes and improve semantic structure. Replaces outdated video links and adjusts JavaScript imports for better maintainability. Enhances styles with updated color and font weight definitions, and minor CSS cleanup.

--- a/project/my-plants.html
+++ b/project/my-plants.html
@@ -110,7 +110,7 @@
 
         <!--Loom Video Link -->
         <div class="footer-video btn">
-          <a href="https://www.loom.com/share/4c0b1f8d2e3f4b5c9e6f7a8b9c0d1e2f" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.loom.com/share/6ec84feeee5e43ffa052e7ddcc2b9c34?sid=1042431b-f57f-4de9-91ab-d8a0a85b2d79" target="_blank" rel="noopener noreferrer">
             Watch Demo Video
           </a>
         </div>
