--- a/project/plant-library.html
+++ b/project/plant-library.html
@@ -31,7 +31,7 @@
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
-    <script type="module" src="scripts/plants.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous" defer></script>
@@ -58,7 +58,7 @@
       <!-- HERO SECTION -->
       <section class="lib-hero-section">
         <div class="lib-hero-container">
-              <h2 class="hero-title">Welcome to the Plant Library</h2>
+              <h1 class="hero-title">Welcome to the Plant Library</h2>
               <p class="hero-description">Your go-to resource for caring for houseplants.</p>
         </div>
       </section>
@@ -96,7 +96,7 @@
 
         <!--Loom Video Link -->
         <div class="footer-video btn">
-          <a href="https://www.loom.com/share/4c0b1f8d2e3f4b5c9e6f7a8b9c0d1e2f" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.loom.com/share/6ec84feeee5e43ffa052e7ddcc2b9c34?sid=1042431b-f57f-4de9-91ab-d8a0a85b2d79" target="_blank" rel="noopener noreferrer">
             Watch Demo Video
           </a>
         </div>
