--- a/project/index.html
+++ b/project/index.html
@@ -70,7 +70,7 @@
       </section>
 
       <!-- BENEFITS SECTION -->
-      <section class="benefits-section">
+      <section>
         <div class="benefits-container">
           <div>
             <h2>Benefits of Indoor Plants</h2>
@@ -125,7 +125,7 @@
 
 
       <!-- GUIDE SECTION -->
-      <section class="guide-section">
+      <section>
         <div class="guide-container">
           <div>
             <h2>Getting Started Guide</h2>
@@ -156,10 +156,10 @@
         </div>
       </section> 
       <!-- START SECTION -->
-      <section class="start-section">
-        <div class="start-container">
+      <section>
+        <div class="start-container"  >
           <div>
-            <div class="start-text">
+            <div>
               <h2 class="start-title">Ready to Start Your Plant Journey?</h2>
               <p class="start-description">Join thousands of plant parents who have transformed their homes with beautiful, healthy houseplants.</p>
             </div>
@@ -186,7 +186,7 @@
 
         <!--Loom Video Link -->
         <div class="footer-video btn">
-          <a href="https://www.loom.com/share/4c0b1f8d2e3f4b5c9e6f7a8b9c0d1e2f" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.loom.com/share/6ec84feeee5e43ffa052e7ddcc2b9c34?sid=1042431b-f57f-4de9-91ab-d8a0a85b2d79" target="_blank" rel="noopener noreferrer">
             Watch Demo Video
           </a>
         </div>
