Simplifies button classes in hero section
Removes redundant class names from buttons in the hero section to improve maintainability and reduce duplication in the HTML structure.

--- a/project/index.html
+++ b/project/index.html
@@ -61,8 +61,8 @@
               <p class="hero-description">Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.</p>
             </div>
             <div class="hero-buttons">
-              <a href="plant-library.html" class="primary-button btn-primary">Explore Plants</a>
-              <a href="my-plants.html" class="secondary-button btn-secondary">Start My Collection</a>
+              <a href="plant-library.html" class="btn-primary">Explore Plants</a>
+              <a href="my-plants.html" class="btn-secondary">Start My Collection</a>
             </div>
           </div>
           <img src='images/hero-image.webp' alt='hero-image' class="hero-image" width="700" height="350" loading="lazy">
